# lokicode

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  _tmp.cjs  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.lokicode/: rules.md
e2e/: deepthink.e2e.ts  repomap.e2e.ts  tauriShim.ts  vitest.config.ts
specs/: README.md  agent-claude-code.md  agent-v3.md  architecture.md  deep-reasoning-v2.md  effort-presets.md  fix-roadmap-deepthink-400-crossplatform-shell.md  frontier-roadmap.md  git-diff-branch.md  github-login.md  loop-mode.md  model-gate.md  router-effort-link.md  speed-and-level.md  terminal-shell-selection.md  updater.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  github.rs  lib.rs  openrouter.rs  search.rs  terminal.rs
src/components/: ActivityBar.tsx  BlameView.tsx  ChatPane.tsx  CommandPalette.tsx  CommitGraph.tsx  DiffPreview.tsx  EditorPane.tsx  ErrorBoundary.tsx  ExplorerPane.tsx  GitDiffView.tsx  GithubAccount.tsx  Markdown.tsx  ModelPicker.tsx  SearchPane.tsx  SettingsModal.tsx  SettingsPane.tsx  SourceControlPane.tsx  TerminalPanel.tsx  UpdateBanner.tsx
src/lib/: agent.test.ts  agent.ts  agentSettings.test.ts  agentSettings.ts  chatStorage.ts  cost.test.ts  cost.ts  defectMemory.test.ts  defectMemory.ts  evidenceCache.test.ts  evidenceCache.ts  files.ts  git.ts  github.ts  keybindings.ts  loop.test.ts  loop.ts  messages.test.ts  messages.ts  modelGate.test.ts  modelGate.ts  modelLedger.ts  (+18 more)
